# rust-practice

candle/: Cargo.toml
candle/examples/falcon/: main.rs
candle/src/: main.rs
constructor-di/: Cargo.toml  README.md
constructor-di/src/: dynamic_dispatch.rs  implementation.rs  lib.rs  main.rs  static_dispatch.rs
flutter_rust/: README.md  pubspec.yaml
flutter_rust/integration_test/: simple_test.dart
flutter_rust/lib/: main.dart
flutter_rust/rust/: Cargo.toml
flutter_rust/rust_builder/: pubspec.yaml
flutter_vs_wasm/: README.md  pubspec.yaml
flutter_vs_wasm/.fvm/: flutter_sdk
flutter_vs_wasm/integration_test/: simple_test.dart
flutter_vs_wasm/lib/: main.dart
flutter_vs_wasm/linux/: CMakeLists.txt  my_application.cc
flutter_vs_wasm/rust/: Cargo.toml
flutter_vs_wasm/rust_builder/: pubspec.yaml
flutter_vs_wasm/web/: index.html  manifest.json
flutter_vs_wasm/windows/: CMakeLists.txt
get-schemes/: Cargo.toml  README.md
get-schemes/src/: android.rs  cli.rs  ios.rs  lib.rs  main.rs
grafana-loki/: Cargo.toml
grafana-loki/src/: main.rs
image_processing/: Cargo.toml
image_processing/src/: main.rs
minimal-cake-pattern/: Cargo.toml  README.md
minimal-cake-pattern/src/: lib.rs  main.rs
pytorch/: .gitignore  Cargo.toml  README.md
rust-wasm/: Cargo.toml  README.md
rust-wasm-markdown/: Cargo.toml  LICENSE_MIT
rust-wasm-markdown/src/: lib.rs
rust-wasm-markdown/tests/: web.rs
simple-arc/: README.md
simple-channel/: Cargo.toml  README.md
simple-spin-lock/: Cargo.toml  README.md
tokio-workspace/: Cargo.toml
(+69 files in other folders)
