[package]
name = "candle-practice"
version = "0.1.0"
edition = "2021"

[features]
default = []
metal = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = [
    "metal",
] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = [
    "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.2", features = [
    "metal",
] }
clap = "4.5.2"
hf-hub = "0.3.2"
tokenizers = "0.15.2"
